--- a/grid.css
+++ b/grid.css
@@ -1,3 +1,17 @@
+.custom__checkbox {
+    display: inline-block;
+    position: relative;
+    width: 45px;
+    height: 16px;
+    border-radius: 8px;
+    background: rgb(195, 195, 195);
+    -webkit-transition: background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+    vertical-align: middle;
+    cursor: pointer;
+    margin: 10px 14px 13px;
+}
+
 #rig li.cardTemplate {
 	display: none;
 }
