--- a/grid.css
+++ b/grid.css
@@ -1,3 +1,18 @@
+.custom__checkbox::before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    left: -4px;
+    width: 22px;
+    height: 22px;
+    background: #fff;
+    border-radius: 50%;
+    -webkit-transition: left 0.28s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: left 0.28s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.51);
+    -moz-box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.51);
+}
 .custom__checkbox {
     display: inline-block;
     position: relative;
