--- a/grid.css
+++ b/grid.css
@@ -4,7 +4,7 @@ button:disabled {
     cursor: not-allowed;
 }
 
-button {
+.send-push button {
     min-width: 100px;
     height: 40px;
     font-size: 14px;
@@ -65,7 +65,7 @@ header {
     z-index: 1;
     position: fixed;
     background-color: orange;
-    height: 35px;
+    height: 40px;
     box-sizing: border-box;
     top: 0px;
   }
