--- a/grid.css
+++ b/grid.css
@@ -64,14 +64,13 @@ header {
     right: 0;
     z-index: 1;
     position: fixed;
-    background-color: orange;
     height: 40px;
     box-sizing: border-box;
     top: 0px;
   }
 .header-wrapper {
-    left: 50px;
-    right: 50px;
+    left: 10px;
+    right: 10px;
     top: 0;
     z-index: 2;
     position: fixed;
@@ -110,12 +109,14 @@ header {
     width: 26px;
     position: relative;
 }
-
+.nav-icon {
+    float: right;
+}
 .nav-icon span {
     display: block;
     height: 3px;
     width: 26px;
-    background: #fff;
+    background: #6f6c65;
     border-radius: 1px;
     opacity: 1;
     transform: rotate(0deg);
