--- a/grid.css
+++ b/grid.css
@@ -70,6 +70,7 @@ header {
     height: 40px;
     box-sizing: border-box;
     top: 0px;
+    background-color: white;
   }
 .header-wrapper {
     left: 10px;
