--- a/grid.css
+++ b/grid.css
@@ -1,7 +1,7 @@
 .record-view--visible {
-    transition: opacity 333ms cubic-bezier(0,0,.21,1);
-    opacity: 1;
-    pointer-events: auto;
+    transition: opacity 333ms cubic-bezier(0,0,.21,1) !important;
+    opacity: 1 !important;
+    pointer-events: auto !important;
 }
 .record-view {
     background: rgba(0,0,0,.57);
