--- a/grid.css
+++ b/grid.css
@@ -1,3 +1,15 @@
+.movie-details {
+    color: white;
+    margin: 16px;
+}
+
+.movie-details span{
+    display: block;
+}
+.movie-details ul{
+    list-style: none;
+    margin-top: 5px;
+}
 .add-to-favourite {
     color: orange;
     font-size: 30px;
